# strawberrypeaches

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: cloud_0.pcd  cloud_1.pcd  cloud_2.pcd  desk.stl  papasan.stl  papasan_small.stl  room_blue.pcd
src/: Kinect2Mesh.cpp
src/Kinect2Mesh/: Kinect2Mesh.cpp
src/RegionGrowing/: region_growing_segmentation.cpp  stdafx.h
src/Registration/: increg.cpp
src/SurfaceSegmentation/: planar_segmentation.cpp  stdafx.h
src/Visualization/: stdafx.h  visualizer.cpp
src/compression/: point_cloud_compression.cpp
src/icp/: icp.cpp
src/qt/: QVTKWidgetTest.cpp
src/qt/multInherit/: RenderWindowUIMultipleInheritance.cxx  RenderWindowUIMultipleInheritance.h  RenderWindowUIMultipleInheritance.ui  RenderWindowUIMultipleInheritanceDriver.cxx  stree.cpp.bak  stree.h
src/surface/: PoissonReconstruction.cpp
src/zlibcompression/: client.cpp  zlibkinect.cpp  zpipe.c  zpipe.cpp  zpipe.h
